get_related_document_urls error handling

--- a/bs.ipynb
+++ b/bs.ipynb
@@ -58,6 +58,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from playwright.async_api import async_playwright\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "async def get_related_document_urls_error_catching(grant_url):\n",
+    "    files = []\n",
+    "    async with async_playwright() as playwright:\n",
+    "        browser = await playwright.chromium.launch(headless=True)\n",
+    "        context = await browser.new_context(accept_downloads=True)\n",
+    "        page = await context.new_page()\n",
+    "\n",
+    "        try:\n",
+    "            response = await page.goto(grant_url, timeout=10000)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error: Failed to navigate to {grant_url}, {e}\")\n",
+    "            return []\n",
+    "        \n",
+    "        if response.status != 200:\n",
+    "            print(f\"Error: Received status code {response.status} for {grant_url}\")\n",
+    "            return []\n",
+    "        \n",
+    "        await page.wait_for_selector('body')\n",
+    "\n",
+    "        if await page.locator('h1:has-text(\"Page Not Found\")').is_visible():\n",
+    "            print(f\"Error: Page Not Found for {grant_url}\")\n",
+    "            return []\n",
+    "\n",
+    "        try:\n",
+    "            related_doc_button = page.locator('button', has_text='Related Documents')\n",
+    "            await related_doc_button.click(timeout=10000)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error: Button not found or failed to click, {e}\")\n",
+    "            return []\n",
+    "\n",
+    "        table_p_tag = page.locator(\n",
+    "            'p:has-text(\"Click on the following file link(s) to download the related document(s):\")')\n",
+    "        if await table_p_tag.is_visible():\n",
+    "            table = table_p_tag.locator('xpath=following-sibling::table')\n",
+    "            if await table.is_visible():\n",
+    "                print(\"Table found\")\n",
+    "\n",
+    "                table_a_tags = await table.locator('a').all()\n",
+    "\n",
+    "                for a_tag in table_a_tags:\n",
+    "                    a_tag_text = await a_tag.text_content()\n",
+    "                    print(f\"Clicking on: {a_tag_text}\")\n",
+    "\n",
+    "                    await a_tag.click()\n",
+    "                    iframe = page.locator('id=attachmentDownload')\n",
+    "                    iframe_src = await iframe.get_attribute('src')\n",
+    "                    if iframe_src:\n",
+    "                        files.append(\n",
+    "                            {\"file_name\": a_tag_text, \"url\": iframe_src})\n",
+    "\n",
+    "        else:\n",
+    "            print(\"No table found\")\n",
+    "\n",
+    "        await browser.close()\n",
+    "\n",
+    "    filtered_files = [file for file in files if file.get(\n",
+    "        \"file_name\") != \"\" and file.get(\"url\")]\n",
+    "    return filtered_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_grant_url=\"https://grant.gov/search-results-detail/356303\"\n",
+    "files = await get_related_document_urls_error_catching(error_grant_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 105,
    "metadata": {},
    "outputs": [],
