using existing assistant and vector store

--- a/bs.ipynb
+++ b/bs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI\n",
+    "\n",
+    "async def prepare_assistant(api_key, grant_url, assistant_id=None, vector_store_id=None):\n",
+    "    client = OpenAI(api_key=api_key)\n",
+    "\n",
+    "    if not assistant_id:\n",
+    "        assistant = client.beta.assistants.create(\n",
+    "            name=\"Grant Document Assistant\",\n",
+    "            instructions=\"You help users understand grant documents.\",\n",
+    "            model=\"gpt-4o\",\n",
+    "            tools=[{\"type\": \"file_search\"}],\n",
+    "        )\n",
+    "        assistant_id = assistant.id\n",
+    "        print(\"Create new assistant with id: \", assistant_id)\n",
+    "    else: \n",
+    "        print(\"Use existing assistant with id: \", assistant_id)\n",
+    "\n",
+    "    assert assistant_id\n",
+    "\n",
+    "    if not vector_store_id:\n",
+    "        grant_id = await download_grant_documents_for_ai(grant_url)\n",
+    "        vector_store = client.beta.vector_stores.create(name=\"Grant Documents\")\n",
+    "\n",
+    "        file_paths = get_file_paths(f\"./{grant_id}\")\n",
+    "        print(file_paths)\n",
+    "        # Ready the files for upload to OpenAI\n",
+    "\n",
+    "        file_streams = [open(path, \"rb\") for path in file_paths]\n",
+    "\n",
+    "        # # Use the upload and poll SDK helper to upload the files, add them to the vector store,\n",
+    "        # # and poll the status of the file batch for completion.\n",
+    "        file_batch = client.beta.vector_stores.file_batches.upload_and_poll(\n",
+    "            vector_store_id=vector_store.id, files=file_streams\n",
+    "        )\n",
+    "\n",
+    "        # # You can print the status and the file counts of the batch to see the result of this operation.\n",
+    "        print(file_batch.status)\n",
+    "        print(file_batch.file_counts)\n",
+    "        vector_store_id = vector_store.id\n",
+    "        print(\"Create new vector store with id: \", vector_store_id)\n",
+    "    else:\n",
+    "        print(\"Use existing vector store with id: \", vector_store_id)\n",
+    "\n",
+    "    assert vector_store_id\n",
+    "\n",
+    "    assistant = client.beta.assistants.update(\n",
+    "        assistant_id=assistant_id,\n",
+    "        tool_resources={\"file_search\": {\n",
+    "            \"vector_store_ids\": [vector_store_id]}},\n",
+    "    )\n",
+    "    return client, assistant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +388,11 @@
    "outputs": [],
    "source": [
     "api_key = None\n",
-    "client, assistant = await create_assistant(api_key, grant_url=\"https://grants.gov/search-results-detail/356303\")"
+    "grant_url=\"https://grants.gov/search-results-detail/356303\"\n",
+    "assistant_id = None\n",
+    "vector_store_id = None\n",
+    "# client, assistant = await create_assistant(api_key, grant_url=\"https://grants.gov/search-results-detail/356303\")\n",
+    "client, assistant = await prepare_assistant(api_key, grant_url, assistant_id, vector_store_id)"
    ]
   },
   {
@@ -359,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
